--- a/src/assets/styles/_classes.css
+++ b/src/assets/styles/_classes.css
@@ -1,6 +1,19 @@
 @layer components {
   /* section class */
+  .section-title {
+    @apply text-[24px] font-bold text-gray-900;
+  }
+  .section-text {
+    @apply font-semibold text-gray-600;
+  }
+
   /* button class */
-  /* container class */
+  .btn {
+    @apply flex items-center justify-center rounded-md bg-green-600 px-8 py-4 font-bold text-white;
+  }
+
   /* main class */
+  .main {
+    @apply max-w[1440px] mx-auto min-h-screen overflow-hidden bg-gray-100;
+  }
 }
